--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -39,15 +39,24 @@ jobs:
           npm run start &
           npx wait-on http://localhost:3000
 
-      - name: Run Playwright tests
+      - name: Run Playwright tests (generate HTML report)
         env:
           E2E_EMAIL: ${{ secrets.E2E_EMAIL }}
           E2E_PASSWORD: ${{ secrets.E2E_PASSWORD }}
-        run: npx playwright test --reporter=github
+        run: |
+          # Run tests with both GitHub annotations and HTML reporter so we have a downloadable report
+          npx playwright test --reporter=github,html
 
-      - name: Upload Playwright report
+      - name: Upload Playwright HTML report
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: playwright-report
           path: playwright-report
+
+      - name: Upload test-results (traces / json)
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-results
+          path: test-results
