--- a/.github/workflows/playwright-axe.yml
+++ b/.github/workflows/playwright-axe.yml
@@ -45,9 +45,19 @@ jobs:
         run: |
           echo "PWD: $(pwd)"
           echo "List root:"; ls -la
-          echo "Find playwright-report:"; find . -maxdepth 4 -type d -name 'playwright-report' -print || true
+          echo "Find playwright-report:"; find . -maxdepth 6 -type d -name 'playwright-report' -print || true
           echo "List playwright-report if exists:"; ls -la playwright-report || true
           echo "List test-results if exists:"; ls -la test-results || true
+
+      - name: Debug: capture HTML report head (if present)
+        run: |
+          if [ -f playwright-report/index.html ]; then
+            echo "Found playwright-report/index.html - saving head to playwright-report/report-head.html"
+            head -n 200 playwright-report/index.html > playwright-report/report-head.html || true
+            echo "Report head:"; sed -n '1,120p' playwright-report/report-head.html || true
+          else
+            echo "No playwright-report/index.html found"
+          fi
 
       - name: Upload Playwright report
         if: always()
