ci: fix accessibility workflow YAML (quote debug step names)

--- a/.github/workflows/accessibility.yml
+++ b/.github/workflows/accessibility.yml
@@ -41,14 +41,14 @@ jobs:
             http://localhost:3000/parent-portal/test-token \
             http://localhost:3000/communication/messages
 
-      - name: Debug: list workspace and audit folder
+      - name: "Debug: list workspace and audit folder"
         run: |
           echo "PWD: $(pwd)"
           echo "List root:"; ls -la
           echo "List audit folder:"; ls -la audit || true
           echo "Show a sample audit file head (if exists):"; head -n 200 $(ls audit/*.json 2>/dev/null | head -n1) || true
 
-      - name: Debug: capture HTML report head (if present)
+      - name: "Debug: capture HTML report head (if present)"
         run: |
           if [ -f playwright-report/index.html ]; then
             echo "Found playwright-report/index.html - saving head to playwright-report/report-head.html"
@@ -88,30 +88,30 @@ jobs:
             const path = require('path')
             const auditDir = path.join(process.cwd(), 'audit')
             if (!fs.existsSync(auditDir)) {
-              core.info('No audit directory found, skipping comment')
+              console.log('No audit directory found, skipping comment')
               return
             }
             const files = fs.readdirSync(auditDir).filter(f=>f.endsWith('.json'))
             if (files.length === 0) {
-              core.info('No audit reports found, skipping comment')
+              console.log('No audit reports found, skipping comment')
               return
             }
-            let body = '## Accessibility audit summary\n\n'
+            let body = '## Accessibility audit summary\\n\\n'
             for (const f of files) {
               try {
                 const r = JSON.parse(fs.readFileSync(path.join(auditDir, f), 'utf8'))
-                body += `### ${f}\n- Violations: **${r.violations?.length || 0}**\n`
+                body += `### ${f}\\n- Violations: **${r.violations?.length || 0}**\\n`
                 for (const v of (r.violations || []).slice(0,5)) {
-                  body += `  - ${v.id} (${v.impact}): ${v.help} — ${v.nodes.length} node(s)\n`
+                  body += `  - ${v.id} (${v.impact}): ${v.help} — ${v.nodes.length} node(s)\\n`
                 }
-                body += '\n'
+                body += '\\n'
               } catch (e) {
-                body += `Failed to parse ${f}: ${e.message}\n\n`
+                body += `Failed to parse ${f}: ${e.message}\\n\\n`
               }
             }
             const pr = github.context.payload.pull_request && github.context.payload.pull_request.number
             if (!pr) {
-              core.info('Not a PR context, skipping comment')
+              console.log('Not a PR context, skipping comment')
               return
             }
             await github.rest.issues.createComment({
