ci: sanitize audit filenames before upload

--- a/.github/workflows/accessibility.yml
+++ b/.github/workflows/accessibility.yml
@@ -65,6 +65,14 @@ jobs:
           name: accessibility-audit
           path: audit
 
+      - name: Sanitize audit filenames
+        if: always()
+        run: |
+          # replace characters that are invalid in artifact filenames on some systems
+          if [ -d audit ]; then
+            node -e "const fs=require('fs'), path=require('path'); const dir='audit'; if(fs.existsSync(dir)){ for(const f of fs.readdirSync(dir)){ const old=path.join(dir,f); const safe=f.replace(/[?&=:\\#%]/g,'_'); if(safe!==f){ fs.renameSync(old,path.join(dir,safe)); console.log('renamed', f, '->', safe); } } } }"
+          fi
+
       - name: Upload Playwright HTML report (if present)
         if: always()
         uses: actions/upload-artifact@v4
