--- a/.github/workflows/accessibility.yml
+++ b/.github/workflows/accessibility.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [ main ]
 
+permissions:
+  issues: write
+  contents: read
+
 jobs:
   accessibility:
     runs-on: ubuntu-latest
@@ -137,7 +141,7 @@ jobs:
                 }
                 body += '\\n'
               } catch (e) {
-                body += `Failed to parse ${f}: ${e.message}\\n\\n`
+                body += `Failed to parse ${f}: ${e.message}\\n\\n'
               }
             }
             const pr = context.payload && context.payload.pull_request && context.payload.pull_request.number
