--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "jest --runInBand",
   "check-firebase": "node tools/check-firebase.js",
     "typecheck": "tsc --noEmit",
     "deploy": "firebase deploy",
     "test:e2e": "playwright test",
     "test:e2e:headed": "playwright test --headed",
-    "test:e2e:report": "playwright show-report"
+    "test:e2e:report": "playwright show-report",
+    "stripe:listen": "stripe listen --forward-to localhost:3000/api/payments/webhook"
   },
   "dependencies": {
     "@genkit-ai/googleai": "^1.14.1",
@@ -61,7 +63,18 @@
     "recharts": "^2.15.4",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "@stripe/react-stripe-js": "^2.1.0",
+    "@stripe/stripe-js": "^2.2.0"
+  },
+  
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1"
+    }
+    ,"testMatch": ["<rootDir>/__tests__/**/*.test.ts"]
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -75,6 +88,10 @@
     "typescript": "^5",
     "@playwright/test": "^1.40.0",
     "playwright": "^1.40.0",
-    "axe-core": "^4.6.3"
+    "axe-core": "^4.6.3",
+    "jest": "^29.6.1",
+    "ts-jest": "^29.1.0",
+    "@types/jest": "^29.5.2"
   }
+
 }
