--- a/.github/workflows/accessibility.yml
+++ b/.github/workflows/accessibility.yml
@@ -151,3 +151,36 @@ jobs:
               issue_number: pr,
               body
             })
+
+  test-pat:
+    runs-on: ubuntu-latest
+    needs: accessibility
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Debug - Check PAT permissions
+        run: |
+          echo "Testing PAT permissions..."
+          curl -H "Authorization: token ${{ secrets.PAT }}" \
+               https://api.github.com/repos/${{ github.repository }} \
+               | jq '.permissions' || echo "PAT authentication failed"
+
+      - name: Test Comment with PAT
+        uses: actions/github-script@v6
+        with:
+          github-token: ${{ secrets.PAT }}
+          script: |
+            console.log('Testing PAT permissions...');
+            try {
+              const result = await github.rest.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: context.issue.number,
+                body: '## PAT Test Successful!\n✅ The PAT has correct permissions'
+              });
+              console.log('Comment created successfully!');
+            } catch (error) {
+              console.log('Error details:', error.message);
+              console.log('Status:', error.status);
+            }
