--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "localize:autofill": "node ./scripts/auto_fill_ar.js",
     "dev": "next dev",
+    "emulator": "firebase emulators:start --only firestore",
+    "seed:emulator": "node tools/prototypes/seed-firebase-emulator.js",
+    "emulator:exec-seed": "npx firebase emulators:exec --only firestore \"node tools/prototypes/seed-firebase-emulator.js\"",
+    "dev:all": "concurrently \"npm:emulator\" \"npm:dev\"",
+    "deploy:indexes": "firebase deploy --only firestore:indexes",
     "genkit:dev": "genkit start --import -- tsx src/ai/dev.ts",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "test": "jest --runInBand",
-  "check-firebase": "node tools/check-firebase.js",
+    "check-firebase": "node tools/check-firebase.js",
     "typecheck": "tsc --noEmit",
+    "diag:fees": "ts-node -r tsconfig-paths/register ./tools/fees-diagnostic.ts",
     "deploy": "firebase deploy",
     "test:e2e": "playwright test",
     "test:e2e:headed": "playwright test --headed",
@@ -43,6 +50,8 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@stripe/react-stripe-js": "^2.1.0",
+    "@stripe/stripe-js": "^2.2.0",
     "@tanstack/react-table": "^8.19.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -63,35 +72,39 @@
     "recharts": "^2.15.4",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2",
-    "@stripe/react-stripe-js": "^2.1.0",
-    "@stripe/stripe-js": "^2.2.0"
+    "zod": "^3.24.2"
   },
-  
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
     "moduleNameMapper": {
       "^@/(.*)$": "<rootDir>/src/$1"
-    }
-    ,"testMatch": ["<rootDir>/__tests__/**/*.test.ts"]
+    },
+    "testMatch": [
+      "<rootDir>/__tests__/**/*.test.ts"
+    ]
   },
   "devDependencies": {
+    "@playwright/test": "^1.40.0",
+    "@types/jest": "^29.5.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "axe-core": "^4.6.3",
+    "concurrently": "^9.2.1",
     "eslint": "9.37.0",
     "eslint-config-next": "15.5.5",
     "genkit-cli": "^1.14.1",
+    "jest": "^29.6.1",
+    "playwright": "^1.40.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "@playwright/test": "^1.40.0",
-    "playwright": "^1.40.0",
-    "axe-core": "^4.6.3",
-    "jest": "^29.6.1",
     "ts-jest": "^29.1.0",
-    "@types/jest": "^29.5.2"
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5"
+  },
+  "overrides": {
+    "glob": "^9.3.0"
   }
-
 }
