--- a/studio-app/firebase.json
+++ b/studio-app/firebase.json
@@ -11,6 +11,10 @@
   "predeploy": [
     "npm --prefix \"$RESOURCE_DIR\" run lint"
   ],
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
+  },
   "hosting": {
     "public": "public",
     "ignore": [
